[gd_scene load_steps=6 format=2]

[ext_resource path="res://Graphics/kenney/PNG/Retina/silver_star.png" type="Texture" id=1]
[ext_resource path="res://Faller.gd" type="Script" id=2]
[ext_resource path="res://Sound/shooting_star.wav" type="AudioStream" id=3]
[ext_resource path="res://Graphics/kenney/PNG/Retina/plus_five.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 33.0

[node name="SilverStar" type="RigidBody2D" groups=[
"five_points",
]]
collision_layer = 16
collision_mask = 6
angular_damp = 0.0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ShootingStar" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -15.0
autoplay = true

[node name="DeathTimer" type="Timer" parent="."]
one_shot = true

[node name="PlusFive" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 4 )

[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
